更改及新的练习

--- a/js动态网站实战课程/自动播放选项卡(复习).html
+++ b/js动态网站实战课程/自动播放选项卡(复习).html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <div id="kBtn">
+    <div id="kBtn" style="display: inline-block;">
         <input type="button" value="政治" class='on'>
         <input type="button" value="经济">
         <input type="button" value="军事">
