--- a/js动态网站实战课程/自动播放选项卡.html
+++ b/js动态网站实战课程/自动播放选项卡.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <div id="box">
+    <div id="box" style="display: inline-block;">
 
                <a href="javascript:;" id="prev">
                 <-</a>
