--- a/js动态网站实战课程/右下角悬浮框.html
+++ b/js动态网站实战课程/右下角悬浮框.html
@@ -1,3 +1,4 @@
+<html>
 <head>
     <style>
         .demo {
@@ -228,3 +229,4 @@
 　　善良的人，为人向善，福报自然会来，人只要保持自己的善良，多做善事，多行善事所付出的，岁月都会回馈你，善行善事，越做越有福气。
     </div>
 </body>
+</html>
