--- a/js动态网站实战课程/JS学习/键盘控制div位置.html
+++ b/js动态网站实战课程/JS学习/键盘控制div位置.html
@@ -16,7 +16,8 @@
         <div id="lianxi" style="left: 0px; top: 0px;"></div>
     </div>
     <script>
-        let divStyle = document.getElementById('lianxi').style // dom只能访问自己本身的style属性，不能访问样式表里的样式
+        let divStyle = document.getElementById('lianxi').style 
+        // dom只能访问自己本身的style属性，不能访问样式表里的样式
 
         /**
          * @param {KeyboardEvent}e
