--- a/js动态网站实战课程/CSS学习/css-inherit&bgd.html
+++ b/js动态网站实战课程/CSS学习/css-inherit&bgd.html
@@ -3,11 +3,12 @@
     <head>
         <style>
             body {
-                /* background-image: url('./yantaohui.jpg');            */
-                /* background-color: burlywood; */   
-                /* background-repeat: no-repeat; */
-               /* background-position: 100px 50px; */
+                background-image: url('../JS学习/yantaohui.jpg');           
+                background-color: burlywood;   
+                background-repeat: no-repeat;
+               background-position: 100px 50px;
                 /* background-position: center; */
+                background: url('../JS学习/yantaohui.jpg')  ;
                 /*图片水平，垂直居中*/
                 /* background-position: 100px center */        
                 /* background-size: auto 300px; */
@@ -20,7 +21,7 @@
                 margin: 30px auto;
                 width: 800px;
                 height: 500px;
-                border: 1px solid blue;
+                border: blue 1px solid ;
                 color: violet;
                 font-size: 30px;
                 font-weight: bold;
