--- a/js动态网站实战课程/HTML学习/超链接变颜色.html
+++ b/js动态网站实战课程/HTML学习/超链接变颜色.html
@@ -19,7 +19,13 @@
 </head>
 
 <body>
+    <!-- 
+        注意： 在CSS定义中，a:hover 必须被置于 a:link 和 a:visited 之后，才是有效的。
 
+        注意： 在 CSS 定义中，a:active 必须被置于 a:hover 之后，才是有效的。
+
+        注意：伪类的名称不区分大小写。
+     -->
     <div>
         <a href="https://www.runoob.com" class="mus" target="blank">菜鸟</a>
     </div>
