--- a/js动态网站实战课程/JS学习/上移下移实现.html
+++ b/js动态网站实战课程/JS学习/上移下移实现.html
@@ -1,32 +1,53 @@
 <head>
-<style>
-    span{
-        width: 200px;
-        border: 1px solid blue;
-    }
-  
-</style>
+    <style>
+        * {
+            box-sizing: border-box;
+
+        }
+
+        .ul1 {
+            width: 200px;
+            border: 1px solid blue;
+            display: flex;
+        }
+
+        .prev,
+        .next {
+            left: 800px;
+        }
+        .move{
+            display: inline-block;
+        }
+    </style>
 </head>
 
 <body>
     <ul id="ul1">
         <li>
-            <span>1.境外输入病例统计：初期一周新增61例 近一周284例</span>
-            <a href="javascript:;" class="prev">上移</a>
-            <a href="javascript:;" class="next">下移</a>
+            <div>1.境外输入病例统计：初期一周新增61例 近一周284例</div>
+            <div class="move">
+                <a href="javascript:;" class="prev">上移</a>
+                <a href="javascript:;" class="next">下移</a>
+            </div>
+
         </li>
         <li>
-            <span>2.中国以外确诊超30万例 美国一周确诊从4千涨至4万</span>
-            <a href="javascript:;" class="prev">上移</a>
-            <a href="javascript:;" class="next">下移</a>
+            <div>2.中国以外确诊超30万例 美国一周确诊从4千涨至4万</div>
+            <div class="move">
+                <a href="javascript:;" class="prev">上移</a>
+                <a href="javascript:;" class="next">下移</a>
+            </div>
+
         </li>
 
-        <li><span>3.明起湖北除武汉以外地区解封 14天后 武汉解封</span>
+        <li>
+            <div class="move"></div>
+            <div>3.明起湖北除武汉以外地区解封 14天后 武汉解封</div>
             <a href="javascript:;" class="prev">上移</a>
             <a href="javascript:;" class="next">下移</a>
         </li>
         <li>
-            <span>4.对所有入境人员严格实施“三查三排一转运”</span>
+            <div>4.对所有入境人员严格实施“三查三排一转运”</div>
             <a href="javascript:;" class="prev">上移</a>
             <a href="javascript:;" class="next">下移</a>
         </li>
@@ -40,7 +61,7 @@
             prevLis[i].onclick = function (evt) {
                 let li = evt.target.parentNode
                 let preLi = li.previousElementSibling || li.previousSibling
-                if(!preLi){
+                if (!preLi) {
                     return;
                 }
                 ulParent.removeChild(li)
