--- a/js动态网站实战课程/JS学习/选项卡.html
+++ b/js动态网站实战课程/JS学习/选项卡.html
@@ -44,19 +44,18 @@
         let divs = box.getElementsByTagName('div')
 
         //加事件
-        for (var i = 0; i < btns.length; i++) {
-            btns[i].ff = i
+        for (let i = 0; i < btns.length; i++) {           
             btns[i].onclick = function () {
                   //隐藏所有div、class样式
-                for (var j = 0; j < divs.length; j++) {
+                for (let j = 0; j < divs.length; j++) {
                     divs[j].style.display = 'none'
-                    // btns[j].className=''
-                    btns[j].setAttribute('class', '')
+                    btns[j].className=''
+                    // btns[j].setAttribute('class', '')
                 }
                //把对应的选项卡下的div展示出来，同时展示选项卡选中时的样式
-                divs[this.ff].style.display = 'block'
-                // this.className="active"
-                this.setAttribute('class', 'active')
+                divs[i].style.display = 'block'
+                this.className="active"
+                // this.setAttribute('class', 'active')
             }
         }
 
