4月中旬所学-模拟后台和前端服务器

--- a/js动态网站实战课程/CSS学习/word系列.html
+++ b/js动态网站实战课程/CSS学习/word系列.html
@@ -4,16 +4,18 @@
         height: 300px;
         border: 1px solid red;
 
-        /* word-break: break-all;  */
+        /* word-break: keep-all; */
+        word-break: break-all; 
         /* word-wrap: break-word; */
+       
 
 
-        overflow: hidden;
+        /* overflow: hidden;
         white-space: nowrap;
-        text-overflow: ellipsis;
-        
-    } 
+        text-overflow: ellipsis; */
+
+    }
 </style>
 <div class="item" title="abc def ghi jkl mnop qr stuv wxyz aa feef edf ewf ew">
-    abc def ghi jkl mnop qr stuv wxyz aa feef edf ewf ew
+    abc def ghi jkl mnop qr student wxyz aa feef edf ewf ew
 </div>
