--- a/实战练习/对象.html
+++ b/实战练习/对象.html
@@ -27,6 +27,7 @@
         [key2]: 'zhaoyanling'
     }
     let k = 'abc'
+    obj.abc = '9999'
     obj.newP = 'new p'
     obj['***'] = ()=>{
         console.log(' print * !')
