--- a/实战练习/淘宝网.html
+++ b/实战练习/淘宝网.html
@@ -218,7 +218,7 @@
             font-family: "宋体";
             letter-spacing: 3px;
             font-size: 15px;
-            position: relative;            
+            position: relative;
         }
 
         .li-show {
@@ -239,9 +239,10 @@
             cursor: pointer;
             border: 1px solid green;
 
-            
+
         }
-        .ul-li:hover{
+
+        .ul-li:hover {
             background-color: #dd6f46;
         }
 
@@ -393,7 +394,7 @@
     <div class="nav-1">
         <div class="nav-1-left">
             <div class="dropdown">
-                <span> 中国大陆</span>
+                <div>中国大陆</div>
                 <div class="dropcontent">
                     <div class="dh">中国香港</div>
                     <div class="dh">中国澳门</div>
@@ -681,7 +682,6 @@
                 <img src="./爱逛街png.png" alt="">
                 <span>献给聪明可爱的你</span>
             </div>
-
             <div class="left-goods">
                 <div class="box-img">
                     <img src="./口红礼盒.jpg" alt="">
@@ -713,12 +713,8 @@
                     <h5>圣罗兰 口红礼盒</h5>
                     <p>多款色号多种选择 轻松</p>
                 </div>
-
-
             </div>
-
         </div>
-
     </div>
 </body>
 <script>
@@ -802,11 +798,4 @@
             move(-520)
         }, 2000)
     }
-
-
-
-
-
-
-
 </script>
