--- a/补充知识点/this2.html
+++ b/补充知识点/this2.html
@@ -32,7 +32,7 @@
     fn.call(obj1, ['qqq', 'q', 'a'],'2','3')
     fn.apply(obj2, ['qqq', 'q', 'a'])
     //bind是返回一个新函数
-    // let fn2 = fn.bind(obj2, '1', '2','3')
-    // fn2()
+    let fn2 = fn.bind(obj2, '1', '2','3')
+    fn2()
 
 </script>
