--- a/js动态网站实战课程/JS学习/图片延迟加载.html
+++ b/js动态网站实战课程/JS学习/图片延迟加载.html
@@ -1,10 +1,11 @@
 <head>
     <style>
-             body {
+        body {
             width: 100vw;
             height: 100vh;
         }
-        .item{
+
+        .item {
             border: 1px solid red;
             display: inline-block;
             overflow: hidden;
@@ -16,27 +17,27 @@
 </head>
 
 <body>
-    
-    <div class="item"><img _src="./图片/_src='img1'.jpg" alt="第一张图片"></div>
-    <div class="item"><img _src="./图片/_src='img2'.jpg" alt="第二张图片"></div>
-    <div class="item"><img _src="./图片/_src='img3'.jpg" alt=""></div>
-    <div class="item"><img _src="./图片/_src='img4'.jpg" alt=""></div>
-    <div class="item"><img _src="./图片/_src='img5'.jpg" alt=""></div>
-    <div class="item"><img _src="./图片/_src='img6'.jpg" alt=""></div>
-    <div class="item"><img _src="./图片/_src='img7'.jpg" alt=""></div>
-    <div class="item"><img _src="./图片/_src='img8'.jpg" alt=""></div>
-    <div class="item"><img _src="./图片/_src='img9'.jpg" alt=""></div>
-    <div class="item"><img _src="./图片/_src='img10'.jpg" alt=""></div>
-    <div class="item"><img _src="./图片/_src='img11'.jpg" alt=""></div>
-    <div class="item"><img _src="./图片/_src='img12'.jpg" alt=""></div>
-    <div class="item"><img _src="./图片/_src='img13'.jpg" alt=""></div>
-    <div class="item"><img _src="./图片/_src='img14'.jpg" alt=""></div>
-    <div class="item"><img _src="./图片/_src='img15'.jpg" alt=""></div>
-    <div class="item"><img _src="./图片/_src='img16'.jpg" alt=""></div>
-    <div class="item"><img _src="./图片/_src='img17'.jpg" alt=""></div>
-    <div class="item"><img _src="./图片/_src='img18'.jpg" alt=""></div>
-    <div class="item"><img _src="./图片/_src='img1'.jpg" alt=""></div>
-    <div class="item"><img _src="./图片/_src='img1'.jpg" alt=""></div>
+
+    <div class="item"><img _src="../图片/_src='img1'.jpg" alt="第一张图片"></div>
+    <div class="item"><img _src="../图片/_src='img2'.jpg" alt="第二张图片"></div>
+    <div class="item"><img _src="../图片/_src='img3'.jpg" alt=""></div>
+    <div class="item"><img _src="../图片/_src='img4'.jpg" alt=""></div>
+    <div class="item"><img _src="../图片/_src='img5'.jpg" alt=""></div>
+    <div class="item"><img _src="../图片/_src='img6'.jpg" alt=""></div>
+    <div class="item"><img _src="../图片/_src='img7'.jpg" alt=""></div>
+    <div class="item"><img _src="../图片/_src='img8'.jpg" alt=""></div>
+    <div class="item"><img _src="../图片/_src='img9'.jpg" alt=""></div>
+    <div class="item"><img _src="../图片/_src='img10'.jpg" alt=""></div>
+    <div class="item"><img _src="../图片/_src='img11'.jpg" alt=""></div>
+    <div class="item"><img _src="../图片/_src='img12'.jpg" alt=""></div>
+    <div class="item"><img _src="../图片/_src='img13'.jpg" alt=""></div>
+    <div class="item"><img _src="../图片/_src='img14'.jpg" alt=""></div>
+    <div class="item"><img _src="../图片/_src='img15'.jpg" alt=""></div>
+    <div class="item"><img _src="../图片/_src='img16'.jpg" alt=""></div>
+    <div class="item"><img _src="../图片/_src='img17'.jpg" alt=""></div>
+    <div class="item"><img _src="../图片/_src='img18'.jpg" alt=""></div>
+    <div class="item"><img _src="../图片/_src='img1'.jpg" alt=""></div>
+    <div class="item"><img _src="../图片/_src='img1'.jpg" alt=""></div>
 </body>
 <script>
     let t = Date.now()
@@ -50,7 +51,7 @@
             }
         }
     }
-    window.onresize=window.onscroll = function () {
+    window.onresize = window.onscroll = function () {
         let now = Date.now();
         if (now - t < 100) {
             return;
