--- a/补充知识点/js修改元素属性.html
+++ b/补充知识点/js修改元素属性.html
@@ -7,8 +7,8 @@
     let oA = document.querySelector("a")
 
     function change() {
-        oA.href = "https://www.sina.cn"
-        // oA.setAttribute('href', "https://www.sina.cn")
+        // oA.href = "https://www.sina.cn"
+        oA.setAttribute('href', "https://www.sina.cn")
         console.log("===");
     }
 
